# products-finding-assistant-py

./: .gitignore  README.md  makefile  products_assistent.db  pyproject.toml
.github/workflows/: lint.yml  lint_test.yml
db/: products_assistent.db
products_assistent/: __init__.py  __main__.py  app.py  choice_alg.py  config.py  config_count.py  products.py  schema.sql  show_data.py  utils.py  work_with_db.py  yandex.py
products_assistent/DB/: conn_to_db.py  products_table.py
products_assistent/app/: auth.py  home.py  user.py  utils.py
products_assistent/db/: conn_to_db.py  prd_price_change_table.py  products_table.py  requests_table.py  users_table.py  work_with_db.py
products_assistent/templates/: base.html  home.html  navbar.html  test.html
products_assistent/templates/auth/: login.html  register.html
products_assistent/templates/user/: edit_profile.html
products_assistent/yandex/: choice_alg.py  yandex.py
tests/: conftest.py  data.sql  test_app.py  test_choice_alg.py  test_products.py  test_yandex.py
tests/fixtures/yandex/: avg_grades.html  del_offer.html  divs_with_data.html  grades.html  name_and_rating.html  prd_cards.html  prd_cards_err.html  price.html  rating_divs.html  right.html  url.html
tests/test_app/: test_auth.py  test_home.py  test_utils.py
tests/test_db/: test_conn_to_db.py  test_products_table.py  test_request_table.py  test_requests_table.py  test_users_table.py
tests/test_yandex/: test_choice_alg.py  test_products.py  test_yandex.py
