[project]
name = "products_assistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "flask>=3.1.0",
    "python-dotenv>=1.0.1",
    "regex>=2024.11.6",
    "requests>=2.32.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "logging>=0.4.9.6",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.ruff]
line-length = 80
fix = true

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --setup-show --verbose"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
omit = ["*/tests/*"]
